<resources>
    <string name="app_name">FARM</string>
    <string name="title_activity_maps">FARM</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="view_data">View Data</string>
    <string name="title_activity_view_data">ViewData</string>
    <string name="resetFile">Delete File</string>
    <string name="share">Share</string>
    <string name="lat">(optional) Lat:</string>
    <string name="lng">(optional) Lng:</string>
    <string name="interval">Refresh Rate:</string>
    <string name="GetInterval_Instructions">"Enter the Refresh Rate in seconds"</string>string>
    <string name="Method_Instructions">"Select Location Method"</string>string>
    <string name="MapType_Instructions">"Select Map Type"</string>string>
    <string name="GPS">Use GPS</string>
    <string name="fusedLocation">Use Fused Location Services</string>
    <string name="regular">Regular</string>
    <string name="satellite">Satellite</string>
    <string name="PressStart">Press START to begin</string>
    <string name="Paused2">PAUSED - press again to write</string>
    <string name="Paused3">PAUSED - press again to clear</string>
    <string name="Paused">PAUSED</string>
    <string name="running">RUNNING</string>
    <string name="GPSCriteria">Use GPS with High Accuracy Criteria</string>
    <string name="enterWidth">Enter Vehicle Width in Feet</string>
    <string name="enterWidth2">Width:</string>
    <string name="title_activity_select_field">SelectField</string>
    <string name="undo">Undo</string>
    <string name="Done">Done</string>
    <string name="settings">Settings</string>
    <string name="drawField">"Tap on the map to draw area of the field"</string>
    <string name="drawFieldError">"Must have at least 3 points or none at all!"</string>
    <string name="drawFieldYN">"Would you like to specify field area?"</string>
    <string name="drawFieldToggle">"I want to draw my field"</string>
    <string name="drawFieldInstructions">"Tap along the edges of the field"</string>
    <string name="OffsetInstructions">"Specify Offset in Feet\n(positive to offset right, negative to offset left)"</string>
    <string name="Offset">"Offset:"</string>



</resources>
